# umeox_JL701n_lvgl_watch

./: .gitignore  README.md
code/: 临时文说明档.txt  新建 文本文档.txt
code/LVPJ（squareline.io仿真工程）/: Smartwatch.sll
code/LVPJ（squareline.io仿真工程）/Smartwatch/: .project  lv_conf.h  lv_drv_conf.h
code/LVPJ（squareline.io仿真工程）/code/: CMakeLists.txt  ui.c  ui_helpers.h
code/LVPJ（squareline.io仿真工程）/code/components/: ui_comp.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_forecastgroup.h  ui_comp_hook.h  ui_comp_stepgroup.c  ui_comp_stepgroup.h  ui_comp_titlegroup.c  ui_comp_titlegroup.h  ui_comp_todayweathergroup.c
code/LVPJ（squareline.io仿真工程）/code/images/: ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_2_png.c  ui_img_btn_bg_3_png.c  ui_img_call1_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_daily_mission_png.c  ui_img_flash_png.c  ui_img_heart2_png.c  ui_img_heart_png.c  ui_img_house_png.c  ui_img_measure_png.c  ui_img_mute_png.c  ui_img_rain_png.c  ui_img_s1_png.c  ui_img_s2_png.c  ui_img_s3_png.c  ui_img_s4_png.c  ui_img_s5_png.c  ui_img_s6_png.c  ui_img_s7_png.c  ui_img_s8_png.c  ui_img_s9_png.c  ui_img_samatha_png.c  ui_img_sec_dot_png.c  ui_img_step_png.c  ui_img_sun_png.c  ui_img_unmute_png.c  ui_img_volume_png.c  ui_img_wave1_png.c  ui_img_wave2_png.c  ui_img_weather_cloud_png.c  ui_img_weather_png.c  ui_img_wind_png.c  ui_img_x_png.c
code/LVPJ（squareline.io仿真工程）/code/screens/: ui_blood_pressure.c  ui_measuing.c  ui_watch_analog.c  ui_watch_digital.c  ui_weather_1.c
code/UI资源分组打包/LVGL资源(6M-15.872M 自定义地址管理)/: 1.run.py  2.copy_to_sdk.bat  clean_all.bat  一键生成.bat
code/loader/ble_app_ota_update/: AC701N_ble_app_ota.cbp  Makefile
code/loader/edr_ota_update/: AC701N_edr_ota2.cbp  Makefile
code/loader/update_ui/: OTA_UI字模生成工具.rar
code/makelib/makelib/: 701N_makelib.cbp  Makefile
code/makelib/makelib_cpp/: 701N_makelib.cbp  Makefile  makelib说明.txt
code/makelib/p11_makelib/: Makefile
code/overlay_flash/overlay_flash/: OVERLAY.docx
code/p11_code/: AC701N_p11.cbp  Makefile
code/p11_code/apps/: app_config.h  debug.c  lib_config.c  main.c  (+4 more)
code/sdk/: Makefile  makefile.c  output_modified.txt
code/sdk_v2.1.0_update_to_v2.1.1/: AC701N.cbp  Makefile
code/ui/: 外挂flash IMB资源使用说明.txt
code/生成LVGL的makefile代码/: h.txt  makefile-c文件（lvgl）.bat  makefile-c文件（ui）.bat  output_modified.txt
(+2420 files in other folders)
